# metrics-wv-swh-bench

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yml
ci/requirements/: docs.yaml  environment.yaml
mwsb/: __init__.py  coloc_with_cmems_model.py  coloc_with_ndbc_buoys.py  config.yml  metrics.py
mwsb/test/: test_metrics.py
